WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156063
Web Automation: Navigation commands should not return until page loads or fails
https://bugs.webkit.org/show_bug.cgi?id=156063
Summary
Web Automation: Navigation commands should not return until page loads or fails
Timothy Hatcher
Reported
2016-03-31 08:07:37 PDT
We need to block these endpoints on waiting until the page loads.
Attachments
Patch
(14.60 KB, patch)
2016-03-31 08:11 PDT
,
Timothy Hatcher
bburg
: review+
timothy
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2016-03-31 08:08:21 PDT
<
rdar://problem/25464373
>
Timothy Hatcher
Comment 2
2016-03-31 08:11:53 PDT
Created
attachment 275282
[details]
Patch
Blaze Burg
Comment 3
2016-03-31 08:47:34 PDT
Comment on
attachment 275282
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=275282&action=review
> Source/WebKit2/UIProcess/Automation/WebAutomationSession.cpp:418 > +}
I believe that this should cancel any pending async script evaluations first so that they error out. We can add this later.
> Source/WebKit2/UIProcess/Automation/WebAutomationSession.h:85 > + void navigationOccuredForPage(const WebPageProxy&);
Please fix spelling: navigationOccurredForPage
> Source/WebKit2/UIProcess/WebPageProxy.cpp:3126 > + if (auto automationSession = process().processPool().automationSession())
Nit: auto should be auto& or auto* so the type is less mysterious (and so we don't accidentally make a copy in some cases).
Timothy Hatcher
Comment 4
2016-03-31 11:44:55 PDT
Comment on
attachment 275282
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=275282&action=review
>> Source/WebKit2/UIProcess/Automation/WebAutomationSession.cpp:418 >> +} > > I believe that this should cancel any pending async script evaluations first so that they error out. We can add this later.
That is already done on the WebProcess side.
Timothy Hatcher
Comment 5
2016-03-31 13:55:22 PDT
https://trac.webkit.org/r198914
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug